--- a/project1.html
+++ b/project1.html
@@ -9,6 +9,7 @@
           <div>
             <h1>Hello Rita</h1>
             <p>It is my project</p>
+            <h4>First Git project</h4>
           </div>  
 </body>
 </html>
