change after release1

--- a/project1.html
+++ b/project1.html
@@ -10,6 +10,7 @@
             <h1>Hello Rita</h1>
             <p>It is my project</p>
             <h4>First Git project</h4>
+            <h2>Keywords are predefined, reserved words used in Python programming that have special meanings to the compiler.</h2>
           </div>  
 </body>
 </html>
